--- a/docker/mlperf-inference-v0.5.openvino/Dockerfile.ubuntu-18.04
+++ b/docker/mlperf-inference-v0.5.openvino/Dockerfile.ubuntu-18.04
@@ -11,7 +11,8 @@ ENTRYPOINT ["/bin/bash", "-c"]
 # Install known system dependencies and immediately clean up to make the image smaller.
 # CK needs: git, wget, zip.
 # OpenVINO needs: CMake.
-RUN DEBIAN_FRONTEND=noninteractive apt update -y\
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt update -y\
  && apt install -y apt-utils\
  && apt upgrade -y\
  && apt install -y\
@@ -115,6 +116,11 @@ RUN ck install package --tags=dataset,imagenet,val,min --no_tags=resized
 RUN ck install package --tags=dataset,imagenet,aux
 # The OpenVINO program expects to find val_map.txt in the dataset directory.
 RUN head -n 500 `ck locate env --tags=aux`/val.txt > `ck locate env --tags=val`/val_map.txt
+# Install misc Python dependencies required for calibration.
+RUN ${CK_PYTHON}  -m pip install --user \
+    nibabel pillow progress py-cpuinfo pyyaml shapely sklearn tqdm xmltodict yamlloader
+# Install "headless" OpenCV (which doesn't need libsm6, libxext6, libxrender-dev).
+RUN ck install package --tags=lib,python-package,cv2,opencv-python-headless
 #-----------------------------------------------------------------------------#
 
 
@@ -122,19 +128,22 @@ RUN head -n 500 `ck locate env --tags=aux`/val.txt > `ck locate env --tags=val`/
 # Step 5. Install the official ResNet model for MLPerf Inference v0.5
 # and convert it into the OpenVINO format.
 #-----------------------------------------------------------------------------#
-RUN ck install package --tags=image-classification,model,tf,resnet
-# Install misc Python dependencies required for calibration.
-RUN ${CK_PYTHON}  -m pip install --user \
-    nibabel pillow progress py-cpuinfo pyyaml shapely sklearn tqdm xmltodict yamlloader
-# Install "headless" OpenCV (which doesn't need libsm6, libxext6, libxrender-dev).
-RUN ck install package --tags=lib,python-package,cv2,opencv-python-headless
-# Convert and calibrate the model.
+RUN ck install package --tags=image-classification,model,tf,mlperf,resnet
 RUN ck install package --tags=model,openvino,resnet50
 #-----------------------------------------------------------------------------#
 
 
 #-----------------------------------------------------------------------------#
-# Step 6. Install the official SSD-MobileNet model for MLPerf Inference v0.5
+# Step 6. Install the official MobileNet model for MLPerf Inference v0.5
+# and convert it into the OpenVINO format.
+#-----------------------------------------------------------------------------#
+RUN ck install package --tags=image-classification,model,tf,mobilenet-v1-1.0-224,non-quantized
+RUN ck install package --tags=model,openvino,mobilenet
+#-----------------------------------------------------------------------------#
+
+
+#-----------------------------------------------------------------------------#
+# Step 7. Install the official SSD-MobileNet model for MLPerf Inference v0.5
 # and convert it into the OpenVINO format.
 #-----------------------------------------------------------------------------#
 RUN ck install package --tags=model,tf,ssd-mobilenet,quantized,for.openvino
@@ -143,7 +152,7 @@ RUN ck install package --tags=model,openvino,ssd-mobilenet
 
 
 #-----------------------------------------------------------------------------#
-# Step 7. Install the COCO 2017 validation dataset (5,000 images).
+# Step 8. Install the COCO 2017 validation dataset (5,000 images).
 #-----------------------------------------------------------------------------#
 # Download the dataset to the default path. Remove all training annotations (~765 MB).
 RUN echo | ck install package --tags=object-detection,dataset,coco.2017,val,original,full\
@@ -158,7 +167,7 @@ RUN ck install package --tags=tool,coco,api
 
 
 #-----------------------------------------------------------------------------#
-# Step 8. Make final preparations to run the OpenVINO program.
+# Step 9. Make final preparations to run the OpenVINO program.
 #-----------------------------------------------------------------------------#
 # Allow the program create tmp files when running under an external user.
 RUN chmod -R g+rwx `ck find ck-openvino:program:mlperf-inference-v0.5`
