--- a/docker/mlperf-inference-v0.5.openvino/Dockerfile.ubuntu-18.04
+++ b/docker/mlperf-inference-v0.5.openvino/Dockerfile.ubuntu-18.04
@@ -181,7 +181,8 @@ RUN chmod -R g+rwx `ck find ck-openvino:program:mlperf-inference-v0.5`
 # using all (virtual) CPU cores.
 #-----------------------------------------------------------------------------#
 CMD ["export NPROCS=`grep -c processor /proc/cpuinfo` \
- && ck run ck-openvino:program:mlperf-inference-v0.5 --cmd_key=image-classification --skip_print_timers \
-    --env.CK_LOADGEN_SCENARIO=Offline --env.CK_LOADGEN_MODE=Accuracy --env.CK_LOADGEN_DATASET_SIZE=500    \
+ && ck run ck-openvino:program:mlperf-inference-v0.5 --skip_print_timers \
+    --cmd_key=image-classification --env.CK_OPENVINO_MODEL_NAME=resnet50 \
+    --env.CK_LOADGEN_SCENARIO=Offline --env.CK_LOADGEN_MODE=Accuracy --env.CK_LOADGEN_DATASET_SIZE=500 \
     --env.CK_OPENVINO_NTHREADS=$NPROCS --env.CK_OPENVINO_NSTREAMS=$NPROCS --env.CK_OPENVINO_NIREQ=$NPROCS \
  && cat /home/dvdt/CK_REPOS/ck-openvino/program/mlperf-inference-v0.5/tmp/accuracy.txt"]
